Added a user guide and updated README.
- A minor update to a notebook example.

--- a/Notebooks/plot_obs_wrf_robust_mcs_trackstats_jointpdf.ipynb
+++ b/Notebooks/plot_obs_wrf_robust_mcs_trackstats_jointpdf.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "48388521-8410-4acb-8000-2f8f8b05c517",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "704b04aa-ac19-4677-8e37-e5abe20d0dbc",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e86face1-8e76-4ab1-b7ae-ac1bd58d99d1",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "00d1e856-8232-4560-beb0-9b56cb12f9dd",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "4f945074-1bad-44ba-b196-7a8f31b8a18b",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "0fc06dd1-c83d-4fe0-9659-ee8b956d0c9e",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "a659305e-8eb5-4be8-b4a1-b3ceb9c72ca3",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "15bc297f-8a7d-4dba-8cde-23569a93832e",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "229e744c-b237-476c-ade8-1f4158dafa67",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        " <BarContainer object of 11 artists>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "12c06982-3b58-465b-a824-cde6191f5fed",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "b2afc097-9725-4f2e-818a-9a7bbb15f820",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "460a6b7c-8656-447c-8c21-3fd82e6c48de",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "1d632a77-9d64-4853-a416-f318cade5ebf",
    "metadata": {},
    "outputs": [
@@ -553,17 +553,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "8ec31e0f-4995-47c5-b428-11e4c014bcd0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15551f080730>]"
+       "[<matplotlib.lines.Line2D at 0x15551fb4c820>]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -594,17 +594,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "011e1e66-f130-4994-a444-d7b72ec6902e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1554bc1b58b0>]"
+       "[<matplotlib.lines.Line2D at 0x15551fa3afd0>]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "b810519b-bdc3-4400-988d-986074d996e5",
    "metadata": {},
    "outputs": [],
@@ -663,11 +663,17 @@
     "        kde_out: np.array\n",
     "            KDE at the desired bins.\n",
     "    \"\"\"\n",
+    "    # Flatten array to 1D\n",
+    "    data1d = data.flatten()\n",
+    "    # Remove NaN (sklearn KDE does not handle NaN), and make a new axis\n",
+    "    _data = data1d[~np.isnan(data1d)][:, np.newaxis]\n",
+    "    _bins = bins[:, np.newaxis]\n",
+    "    \n",
     "    # Estimate 1D KDE following sklearn example\n",
     "    # https://scikit-learn.org/stable/auto_examples/neighbors/plot_kde_1d.html\n",
-    "    kde = KernelDensity(kernel=kde_kernel, bandwidth=kde_bw).fit(data)\n",
+    "    kde = KernelDensity(kernel=kde_kernel, bandwidth=kde_bw).fit(_data)\n",
     "    # Get KDE values based on input bins\n",
-    "    log_dens = kde.score_samples(bins)\n",
+    "    log_dens = kde.score_samples(_bins)\n",
     "    # Get linear density\n",
     "    kde_out = np.exp(log_dens)\n",
     "    return kde_out"
@@ -675,65 +681,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "eebac1b4-0e8d-46a4-9fc4-bf33c5835ae1",
    "metadata": {},
    "outputs": [],
    "source": [
     "lifetime_bins = np.linspace(0, 60, 1000)\n",
-    "kde_lifetime_obs = get_kde1d(lifetime_land_obs.data[:, np.newaxis], lifetime_bins[:, np.newaxis], kde_bw=3)\n",
-    "kde_lifetime_m1 = get_kde1d(lifetime_land_m1.data[:, np.newaxis], lifetime_bins[:, np.newaxis], kde_bw=3)"
+    "kde_lifetime_obs = get_kde1d(lifetime_land_obs.data, lifetime_bins, kde_bw=3)\n",
+    "kde_lifetime_m1 = get_kde1d(lifetime_land_m1.data, lifetime_bins, kde_bw=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "f5d63349-64fc-40a8-87ec-baad257530da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sklearn KDE does not handle NaN, remove NaN data\n",
-    "mcsspeed_land_obs = speed_land_obs.where(mcsstatus_land_obs == 1).data\n",
-    "mcsspeed_land_obs = mcsspeed_land_obs[~np.isnan(mcsspeed_land_obs)]\n",
-    "mcsspeed_land_m1 = speed_land_m1.where(mcsstatus_land_m1 == 1).data\n",
-    "mcsspeed_land_m1 = mcsspeed_land_m1[~np.isnan(mcsspeed_land_m1)]\n",
-    "\n",
     "speed_bins = np.linspace(0, 30, 1000)\n",
-    "kde_speed_obs = get_kde1d(mcsspeed_land_obs[:, np.newaxis], speed_bins[:, np.newaxis], kde_bw=2)\n",
-    "kde_speed_m1 = get_kde1d(mcsspeed_land_m1[:, np.newaxis], speed_bins[:, np.newaxis], kde_bw=2)"
+    "kde_speed_obs = get_kde1d(speed_land_obs.where(mcsstatus_land_obs == 1).data, speed_bins, kde_bw=2)\n",
+    "kde_speed_m1 = get_kde1d(speed_land_m1.where(mcsstatus_land_m1 == 1).data, speed_bins, kde_bw=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "feef37f2-0950-48ac-86fc-303c4bb509c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mcs_ccsdiam_land_obs = ccsdiam_land_obs.where(mcsstatus_land_obs == 1).data\n",
-    "mcs_ccsdiam_land_obs = mcs_ccsdiam_land_obs[~np.isnan(mcs_ccsdiam_land_obs)]\n",
-    "mcs_ccsdiam_land_m1 = ccsdiam_land_m1.where(mcsstatus_land_m1 == 1).data\n",
-    "mcs_ccsdiam_land_m1 = mcs_ccsdiam_land_m1[~np.isnan(mcs_ccsdiam_land_m1)]\n",
-    "\n",
     "ccsdiam_bins = np.linspace(0, 1000, 1000)\n",
-    "kde_ccsdiam_obs = get_kde1d(mcs_ccsdiam_land_obs[:, np.newaxis], ccsdiam_bins[:, np.newaxis], kde_bw=20)\n",
-    "kde_ccsdiam_m1 = get_kde1d(mcs_ccsdiam_land_m1[:, np.newaxis], ccsdiam_bins[:, np.newaxis], kde_bw=20)"
+    "kde_ccsdiam_obs = get_kde1d(ccsdiam_land_obs.where(mcsstatus_land_obs == 1).data, ccsdiam_bins, kde_bw=20)\n",
+    "kde_ccsdiam_m1 = get_kde1d(ccsdiam_land_m1.where(mcsstatus_land_m1 == 1).data, ccsdiam_bins, kde_bw=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "9e3b3d5e-c8b9-448b-9d09-269e37de23cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mcs_pfdiam_land_obs = pfdiam_obs.where(mcsstatus_land_obs == 1).data\n",
-    "mcs_pfdiam_land_obs = mcs_pfdiam_land_obs[~np.isnan(mcs_pfdiam_land_obs)]\n",
-    "mcs_pfdiam_land_m1 = pfdiam_m1.where(mcsstatus_land_m1 == 1).data\n",
-    "mcs_pfdiam_land_m1 = mcs_pfdiam_land_m1[~np.isnan(mcs_pfdiam_land_m1)]\n",
     "pfdiam_bins = np.linspace(0, 500, 1000)\n",
-    "kde_pfdiam_obs = get_kde1d(mcs_pfdiam_land_obs[:, np.newaxis], pfdiam_bins[:, np.newaxis], kde_bw=20)\n",
-    "kde_pfdiam_m1 = get_kde1d(mcs_pfdiam_land_m1[:, np.newaxis], pfdiam_bins[:, np.newaxis], kde_bw=20)"
+    "kde_pfdiam_obs = get_kde1d(pfdiam_obs.where(mcsstatus_land_obs == 1).data, pfdiam_bins, kde_bw=20)\n",
+    "kde_pfdiam_m1 = get_kde1d(pfdiam_m1.where(mcsstatus_land_m1 == 1).data, pfdiam_bins, kde_bw=20)"
    ]
   },
   {
@@ -746,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "a3ec8ffe-14c6-444c-bdb6-5fd80ed9d7d7",
    "metadata": {},
    "outputs": [
