--- a/Notebooks/plot_obs_wrf_mcs_seasonal_rainmap.ipynb
+++ b/Notebooks/plot_obs_wrf_mcs_seasonal_rainmap.ipynb
@@ -4622,9 +4622,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "testflex",
+   "display_name": "flextrkr",
    "language": "python",
-   "name": "testflex"
+   "name": "flextrkr"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4636,7 +4636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
