Updated MCS analysis Jupyter Notebooks.
Tested running the notebooks with a new PyFLEXTRKR Conda environment and updated the depreciated functions.

--- a/Notebooks/plot_obs_wrf_mcs_diurnal_hovmoller_by_season.ipynb
+++ b/Notebooks/plot_obs_wrf_mcs_diurnal_hovmoller_by_season.ipynb
@@ -45,13 +45,14 @@
      "text": [
       "Number of files (OBS): 104\n",
       "Number of files (WRF): 104\n",
-      "Fig directory: /global/cfs/cdirs/m2637/zfeng/TGW_MCS/figures/\n"
+      "Fig directory: /global/cfs/cdirs/m1867/www/PyFLEXTRKR/sample_data/TGW_MCS/figures/\n"
      ]
     }
    ],
    "source": [
     "# Sepcify directory of the MCS track stats file\n",
-    "rootdir = '/pscratch/sd/s/souravt/PyFLEXTRKR/TGW_MCS/HIST/'\n",
+    "# rootdir = '/pscratch/sd/s/souravt/PyFLEXTRKR/TGW_MCS/HIST/'\n",
+    "rootdir = '/global/cfs/cdirs/m1867/www/PyFLEXTRKR/sample_data/TGW_MCS/'\n",
     "# Specify region name\n",
     "# region = 'SGP'\n",
     "region = 'NGP'\n",
@@ -66,13 +67,10 @@
     "print(f'Number of files (OBS): {nfiles_gpm}')\n",
     "print(f'Number of files (WRF): {nfiles_wrf}')\n",
     "\n",
-    "figdir = f'/global/cfs/cdirs/m2637/zfeng/TGW_MCS/figures/'\n",
+    "# figdir = f'/global/cfs/cdirs/m2637/zfeng/TGW_MCS/figures/'\n",
+    "figdir = f'/global/cfs/cdirs/m1867/www/PyFLEXTRKR/sample_data/TGW_MCS/figures/'\n",
     "os.makedirs(figdir, exist_ok=True)\n",
-    "print(f'Fig directory: {figdir}')\n",
-    "\n",
-    "# # Specify time range to use for the composite period\n",
-    "# sdate = '2018-12-01'\n",
-    "# edate = '2019-03-01'"
+    "print(f'Fig directory: {figdir}')"
    ]
   },
   {
@@ -218,7 +216,6 @@
    "source": [
     "# Read OBS data\n",
     "dsobs = xr.open_mfdataset(obsfiles, concat_dim='time', combine='nested')\n",
-    "# dsobs = dsobs.sel(time=slice(sdate, edate))\n",
     "lon_obs = dsobs.lon"
    ]
   },
@@ -255,7 +252,6 @@
    "source": [
     "# Read Model data\n",
     "dswrf = xr.open_mfdataset(wrffiles, concat_dim='time', combine='nested')\n",
-    "# dswrf = dswrf.sel(time=slice(sdate, edate))\n",
     "lon_wrf = dswrf.lon"
    ]
   },
@@ -310,7 +306,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x7f3fb57195a0>"
+       "<matplotlib.contour.QuadContourSet at 0x7fd1731ddf90>"
       ]
      },
      "execution_count": 11,
@@ -341,7 +337,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x7f3fb4537460>"
+       "<matplotlib.contour.QuadContourSet at 0x7fd170134280>"
       ]
      },
      "execution_count": 12,
@@ -469,7 +465,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f3fb41f7040>"
+       "<matplotlib.colorbar.Colorbar at 0x7fd15840dab0>"
       ]
      },
      "execution_count": 16,
@@ -502,7 +498,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f3fb40592a0>"
+       "<matplotlib.colorbar.Colorbar at 0x7fd158478c70>"
       ]
      },
      "execution_count": 17,
@@ -558,7 +554,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f3fb4502800>"
+       "<matplotlib.colorbar.Colorbar at 0x7fd158327a30>"
       ]
      },
      "execution_count": 19,
@@ -657,7 +653,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f3fac70c5b0>"
+       "<matplotlib.legend.Legend at 0x7fd158663940>"
       ]
      },
      "execution_count": 24,
@@ -691,7 +687,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f3fac773a00>"
+       "<matplotlib.legend.Legend at 0x7fd1583cdea0>"
       ]
      },
      "execution_count": 25,
@@ -724,7 +720,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f3fb418ad40>"
+       "<matplotlib.legend.Legend at 0x7fd158094a90>"
       ]
      },
      "execution_count": 26,
@@ -757,7 +753,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f3fac5162f0>"
+       "<matplotlib.colorbar.Colorbar at 0x7fd15816fe50>"
       ]
      },
      "execution_count": 27,
@@ -797,7 +793,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f3fac4633d0>"
+       "<matplotlib.colorbar.Colorbar at 0x7fd134637d60>"
       ]
      },
      "execution_count": 28,
@@ -1030,7 +1026,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/global/cfs/cdirs/m2637/zfeng/TGW_MCS/figures/rainhov_diurnal_map_NGP.png\n"
+      "/global/cfs/cdirs/m1867/www/PyFLEXTRKR/sample_data/TGW_MCS/figures/rainhov_diurnal_map_NGP.png\n"
      ]
     },
     {
@@ -1086,7 +1082,7 @@
     {
      "data": {
       "text/plain": [
-       "'/global/cfs/cdirs/m2637/zfeng/TGW_MCS/figures/'"
+       "'/global/cfs/cdirs/m1867/www/PyFLEXTRKR/sample_data/TGW_MCS/figures/'"
       ]
      },
      "execution_count": 33,
@@ -1299,7 +1295,7 @@
     {
      "data": {
       "text/plain": [
-       "'/global/cfs/cdirs/m2637/zfeng/TGW_MCS/figures/'"
+       "'/global/cfs/cdirs/m1867/www/PyFLEXTRKR/sample_data/TGW_MCS/figures/'"
       ]
      },
      "execution_count": 39,
