--- a/Notebooks/plot_steiner_convective_cell_functions.ipynb
+++ b/Notebooks/plot_steiner_convective_cell_functions.ipynb
@@ -374,9 +374,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flextrkr",
+   "display_name": "pyflex",
    "language": "python",
-   "name": "flextrkr"
+   "name": "pyflex"
   },
   "language_info": {
    "codemirror_mode": {
@@ -388,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
