Addition of author credits to notebooks.

--- a/Notebooks/create_demo_clouds.ipynb
+++ b/Notebooks/create_demo_clouds.ipynb
@@ -5,9 +5,18 @@
    "id": "643dabc0",
    "metadata": {},
    "source": [
-    "# Creating a Demonstration of Synthetic Clouds\n",
+    "# Creating synthetic clouds\n",
     "\n",
-    "This notebook demonstrates how to generate synthetic cloud data for testing and visualization purposes. It includes steps to create cloud-like structures using Gaussian filters, save the data in NetCDF format, and visualize the results. This can be useful for testing algorithms or creating example datasets for analysis."
+    "### Author: Laura Paccini\n",
+    "### Email: laura.paccini@pnnl.gov"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85b9c529",
+   "metadata": {},
+   "source": [
+    "This notebook demonstrates how to generate synthetic cloud data for testing and visualization purposes. It includes steps to create cloud-like structures using Gaussian filters, save the data in NetCDF format, and visualize the results. "
    ]
   },
   {
