--- a/Notebooks/plot_tracks_pbc_demo.ipynb
+++ b/Notebooks/plot_tracks_pbc_demo.ipynb
@@ -5,7 +5,9 @@
    "id": "2c1a0585-ba96-426c-932c-b368f95b7f54",
    "metadata": {},
    "source": [
-    "### This notebook provides a demonstration of how to visualize storm tracks using periodic boundary conditions (PBC). "
+    "# Visualization of cloud tracks with periodic boundary conditions (PBC).\n",
+    "### Author: Laura Paccini\n",
+    "### Email: laura.paccini@pnnl.gov"
    ]
   },
   {
